wiki/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: wiki
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
